# caliptra-mcu-sw

./: .gitignore  Cargo.toml  README.md  new-feature.txt
builder/: Cargo.toml
builder/src/: all.rs  apps.rs  attestation_manifest.rs  caliptra.rs  features.rs  firmware.rs  flash_image.rs  lib.rs  network_rom.rs  rom.rs  runtime.rs  utils.rs
caliptra-util-host/: Cargo.toml  README.md
caliptra-util-host/apps/mailbox/: README.md  test-config.toml
caliptra-util-host/apps/mailbox/client/: Cargo.toml
caliptra-util-host/apps/mailbox/config/: Cargo.toml
caliptra-util-host/apps/mailbox/server/: Cargo.toml
caliptra-util-host/apps/mctp-vdm/: test-config.toml
caliptra-util-host/apps/spdm/: test-config.toml
caliptra-util-host/cbinding/: Cargo.toml  cbindgen.toml
caliptra-util-host/cbinding/include/: caliptra_util_host.h
caliptra-util-host/cbinding/src/: command.rs  custom_transport.rs  lib.rs  mailbox_transport.rs  session.rs  types.rs
caliptra-util-host/cbinding/tests/: Makefile  caliptra_test_utils.c  test_custom_c_transport.c
caliptra-util-host/command-types/: Cargo.toml
caliptra-util-host/command-types/src/: certificate.rs  debug_unlock.rs  device_info.rs  device_log.rs  fuse.rs  lib.rs
caliptra-util-host/commands/: Cargo.toml
caliptra-util-host/commands/src/: lib.rs  packing.rs
caliptra-util-host/osal/: Cargo.toml
caliptra-util-host/session/: Cargo.toml
caliptra-util-host/session/src/: lib.rs
caliptra-util-host/src/: lib.rs
caliptra-util-host/tests/: Cargo.toml
caliptra-util-host/tests/src/: integration_tests.rs  lib.rs  test_aes.rs  test_crypto_asymmetric.rs  test_get_device_capabilities.rs  test_get_device_id.rs  test_get_device_info.rs  test_get_firmware_version.rs  test_hmac.rs  test_sha.rs
caliptra-util-host/transport/: Cargo.toml
caliptra-util-host/transport/src/: error.rs  lib.rs
caliptra-util-host/xtask/src/: main.rs  test.rs
common/command-auth-challenge-signer/: Cargo.toml
common/command-auth-challenge-signer/src/: lib.rs
common/debug-unlock-signer/: Cargo.toml
common/debug-unlock-signer/src/: lib.rs  local.rs
common/testing/: Cargo.toml
common/testing/src/: i3c_socket.rs  i3c_socket_server.rs  lib.rs  logging_seed.rs  mctp_transport.rs  mctp_vdm_transport.rs
common/testing/tests/: state_ordering.rs
coverage/: Cargo.toml
coverage/src/: lib.rs
emulator/app/: Cargo.toml
emulator/app/mcu-mbox/: Cargo.toml
emulator/app/src/: doe_mbox_fsm.rs  emulator.rs  main.rs
emulator/cbinding/: Cargo.toml  README.md  cbindgen.toml  emulator.c
emulator/cbinding/src/: lib.rs  simple_test.rs
emulator/periph/: Cargo.toml
emulator/periph/src/: axicdma.rs  doe_mbox.rs  ecc_ram.rs  ethernet.rs  flash_ctrl.rs  i3c.rs  i3c_protocol.rs  lc_ctrl.rs  lib.rs  mci.rs  mcu_mbox0.rs  network_root_bus.rs  otp.rs  reset_reason.rs  root_bus.rs  usbdev.rs
firmware-bundler/: Cargo.toml
firmware-bundler/data/: default-bare-metal-layout.ld  default-kernel-layout.ld  default-rom-layout.ld
firmware-bundler/reference/emulator/: bare-metal.toml  example-app-devel.toml  example-app.toml  user-app-devel.toml  user-app.toml
firmware-bundler/reference/fpga/: bare-metal.toml  example-app.toml  user-app.toml
firmware-bundler/src/: args.rs  build.rs  bundle.rs  ld.rs  lib.rs  manifest.rs  size.rs  tbf.rs
hw/model/: Cargo.toml
hw/model/src/: debug_unlock.rs  flash_ctrl.rs  jtag.rs  lcc.rs  lib.rs  mcu_mbox_transport.rs  mcu_mgr.rs  model_emulated.rs  model_fpga_realtime.rs  otp_provision.rs  usb_ctrl.rs  vmem.rs
hw/model/test-fw/: Cargo.toml  axi_bypass.rs  hitless_update_flow.rs  mailbox_responder.rs  otp_blank_check.rs  sw_digest_lock.rs  usb_ocp_recovery.rs  usb_responder.rs
network/drivers/: Cargo.toml
network/drivers/src/: ethernet.rs  lib.rs  system.rs  uart.rs
network/rom/: Cargo.toml  build.rs
network/rom/src/: main.rs
ocp-eat-verifier/: Cargo.toml
ocp-eat-verifier/ocptoken/: Cargo.toml
ocp-eat-verifier/ocptoken-lib/: Cargo.toml
ocp-eat-verifier/ocptoken-lib/src/: appraisal.rs  error.rs  lib.rs
ocp-eat-verifier/ocptoken-lib/tests/: test_evidence.rs
ocp-eat-verifier/ocptoken-rs/: Cargo.toml
ocp-eat-verifier/ocptoken-rs/src/: lib.rs  main.rs
ocp-eat-verifier/ocptoken/src/: appraise.rs  authenticate.rs  common.rs  display.rs  main.rs  verify.rs
provisioning/common/: Cargo.toml
provisioning/common/src/: lib.rs
provisioning/test-unlocked-fw/: Cargo.toml
provisioning/test-unlocked-fw/src/: main.rs  start.S
registers/generated-emulator/: Cargo.toml
registers/generated-emulator/src/: axicdma.rs  dma.rs  doe_mbox.rs  el2_pic.rs  ethernet.rs  i3c.rs  i3c1.rs  lc.rs  lib.rs  mbox.rs  mci.rs  otp.rs  primary_flash.rs  root_bus.rs  secondary_flash.rs  sha512_acc.rs  soc.rs  stub_warnings.rs  usbdev.rs
registers/generator/: Cargo.toml
registers/generator/src/: codegen.rs  schema.rs  systemrdl.rs
rom/: Cargo.toml
rom/src/: boot_status.rs  caliptra_svn.rs  cold_boot.rs  component_svn_manifest.rs  device_ownership_transfer.rs  dot_override.rs  dot_recovery.rs  firmware_headers.rs  fuse_layout.rs  fuses.rs  fw_boot.rs  fw_hitless_update.rs  hooks.rs  i3c.rs  i3c_mailbox.rs  image_verifier.rs  lib.rs  lifecycle.rs  mailbox.rs  otp.rs  recovery.rs  rom.rs  rom_env.rs  stable_owner_key.rs  warm_boot.rs
rom/src/flash/: memory.rs
rom/src/recovery/: flash.rs  ocp.rs
romtime/: Cargo.toml
romtime/src/: boot_status.rs  component_svn_manifest.rs  fuse_layout.rs  handoff.rs  lib.rs  lifecycle.rs  mci.rs  mci_mbox_cmd.rs  ocp_lock.rs  otp.rs  otp_provision.rs  soc_manager.rs
runtime/bare-metal/: Cargo.toml  manifest.toml
runtime/bare-metal/io/: Cargo.toml
runtime/bare-metal/src/: main.rs  start.S
xtask/: Cargo.toml
xtask/src/: auth_manifest.rs  cargo_lock.rs  ci.rs  clippy.rs  corim.rs  coverage.rs  deps.rs  docs.rs  emulator_cbinding.rs  format.rs  fpga.rs  fuses.rs  header.rs  main.rs  pldm_fw_pkg.rs  precheckin.rs  registers.rs  rom.rs  runtime.rs  sizes.rs  test.rs  vertex_ai.rs
xtask/src/fpga/: configurations.rs  mod.rs  utils.rs
xtask/src/network/: build.rs  mod.rs  server.rs
(+949 files in other folders)
