# Licensed under the Apache-2.0 license

[workspace]
members = [
    "builder",
    "common/config",
    "common/debug-unlock-signer",
    "common/flash-image",
    "common/mcu-mbox",
    "common/otp-digest",
    "common/otp-lifecycle",
    "common/mctp-vdm",
    "common/pldm",
    "common/poll",
    "common/testing",
    "emulator/app",
    "emulator/app/mcu-mbox",
    "emulator/bmc/pldm-fw-pkg",
    "emulator/bmc/pldm-ua",
    "emulator/caliptra",
    "emulator/cbinding",
    "emulator/compliance-test",
    "emulator/consts",
    "emulator/periph",
    "error",
    "firmware-bundler",
    "hw/model",
    "hw/model/test-fw/exception-handler",
    "hw/model/test-fw/hitless-update-flow",
    "hw/model/test-fw/mailbox-responder",
    "hw/model/test-fw/otp-blank-check",
    "hw/model/test-fw/lc-ctrl",
    "hw/model/test-fw/otp-scramble-check",
    "coverage",
    "hw/model/test-fw/sw-digest-lock",
    "platforms/common",
    "platforms/emulator/config",
    "platforms/emulator/mcu-image-header",
    "platforms/emulator/rom",
    "platforms/emulator/runtime",
    "platforms/emulator/runtime/kernel/capsules",
    "platforms/emulator/runtime/kernel/drivers/dma",
    "platforms/emulator/runtime/kernel/drivers/doe_mbox",
    "platforms/emulator/runtime/kernel/drivers/mcu_mbox",
    "platforms/emulator/runtime/userspace/api/caliptra-api",
    "platforms/emulator/runtime/userspace/apps/example",
    "platforms/emulator/runtime/userspace/apps/user",
    "platforms/fpga/config",
    "platforms/fpga/rom",
    "platforms/fpga/runtime",
    "platforms/test_harness",
    "provisioning/fuses/fusegen",
    "provisioning/fuses/lib",
    "registers/fuses",
    "registers/generated-emulator",
    "registers/generated-firmware",
    "registers/generator",
    "registers/systemrdl-new",
    "registers/systemrdl",
    "rom",
    "romtime",
    "runtime/bare-metal",
    "runtime/kernel/capsules",
    "runtime/kernel/components",
    "runtime/kernel/drivers/doe",
    "runtime/kernel/drivers/i3c",
    "runtime/kernel/drivers/mcu_mbox",
    "runtime/kernel/veer",
    "runtime/userspace/api/caliptra-api",
    "runtime/userspace/api/external-cmds-common",
    "runtime/userspace/api/mcu-mbox-lib",
    "runtime/userspace/api/mctp-vdm-lib",
    "runtime/userspace/api/pldm-lib",
    "runtime/userspace/api/spdm-lib",
    "runtime/userspace/libtock/apis/interface/console",
    "runtime/userspace/libtock/apis/kernel/low_level_debug",
    "runtime/userspace/libtock/apis/peripherals/alarm",
    "runtime/userspace/libtock/apis/peripherals/rng",
    "runtime/userspace/libtock/tbf-header",
    "runtime/userspace/libtock/panic_handlers/debug_panic",
    "runtime/userspace/libtock/panic_handlers/small_panic",
    "runtime/userspace/libtock/platform",
    # "runtime/userspace/libtock/runner",
    "runtime/userspace/libtock/runtime",
    "runtime/userspace/libtock/syscalls_tests",
    # "runtime/userspace/libtock/tools/print_sizes",
    "runtime/userspace/libtock/ufmt",
    "runtime/userspace/libtock/unittest",
    "runtime/userspace/libtockasync",
    "runtime/userspace/syscall",
    "tests/hello",
    "tests/integration",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Caliptra contributors"]

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.97"
arrayvec = { version = "0.7.4", default-features = false }
async-trait = "0.1.87"
base64 = "0.22"
bitfield = "0.14.0"
bitflags = "2.4.0"
bit-vec = "0.6.3"
cargo_metadata = "0.20.0"
cbindgen = "0.24"
cc = "1.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = [
    "cargo",
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
] }
clap-num = "1.2.0"
constant_time_eq = { version = "0.4.2", default-features = false }
crc = "3.2.1"
crc32fast = "1.4.2"
critical-section = "1.1.2"
crossterm = "0.28.1"
ctrlc = "3.4.5"
elf = "0.7.4"
ecdsa = { version = "0.16.9", features = ["pem"]}
embassy-executor = "0.9.1"
embassy-sync = "0.6.2"
embedded-alloc = "0.5.1"
embedded-hal = "1.0"
fips204 = "0.4.6"
futures = "0.3.31"
gdbstub = "0.6.3"
gdbstub_arch = "0.2.4"
getrandom = "0.2"
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
int-enum = "1.2.0"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4.26"
nix = "0.26.2"
num_enum = "0.7.2"
num-derive = "0.4.2"
num-traits = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
pkcs8 = "0.10.2"
portable-atomic = "1.7.0"
p384 = "0.13.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.66"
quote = "1.0"
rand = "0.8.5"
rayon = "1.10"
random-port = "0.1.1"
same-file = "1"
semver = "1.0.23"
sec1 = { version = "0.7.3" }
serde = { version = "1.0.209", features = ["alloc", "derive", "serde_derive"] }
serde_json = { version = "1.0.127", features = ["alloc"] }
serde-hjson = "1.1.0"
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
simple_logger = "5.0.0"
smlang = "0.8.0"
static_cell = "2.1.0"
subst = "0.3.8"
sudo = "0.6.0"
strum = "0.24"
strum_macros = "0.24"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
tempfile = "3.14.0"
thiserror = "2"
toml = "0.8.19"
uio = "0.4.0"
uuid = { version = "1.10.0", features = ["serde", "v4"]}
walkdir = "2.5.0"
winnow = "0.7.4"
zerocopy = { version = "0.8.17", features = ["derive"] }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }
zip = { version = "4.3.0", default-features = false, features = ["chrono", "deflate"] }

# local dependencies
caliptra-mailbox-client = { path = "caliptra-util-host/apps/mailbox/client" }
caliptra-mcu-core-util-host-mailbox-test-config = { path = "caliptra-util-host/apps/mailbox/config" }
caliptra-mcu-core-util-host-mctp-vdm-test-config = { path = "caliptra-util-host/apps/mctp-vdm/config" }
caliptra-mcu-core-mctp-vdm-client = { path = "caliptra-util-host/apps/mctp-vdm/client" }
caliptra-mcu-core-util-host-transport = { path = "caliptra-util-host/transport" }
caliptra-mcu-core-util-host-command-types = { path = "caliptra-util-host/command-types" }
caliptra-mcu-core-util-host-osal = { path = "caliptra-util-host/osal" }
caliptra-util-host-commands = { path = "caliptra-util-host/commands" }
caliptra-util-host-session = { path = "caliptra-util-host/session" }
caliptra-mcu-core-mailbox-server = { path = "caliptra-util-host/apps/mailbox/server" }
caliptra-mcu-capsules-emulator = { path = "platforms/emulator/runtime/kernel/capsules" }
caliptra-mcu-capsules-runtime = { path = "runtime/kernel/capsules" }
caliptra-mcu-dma-driver = { path = "platforms/emulator/runtime/kernel/drivers/dma" }
caliptra-mcu-doe-mbox-driver = { path = "platforms/emulator/runtime/kernel/drivers/doe_mbox" }
caliptra-mcu-doe-transport = { path = "runtime/kernel/drivers/doe"}
caliptra-mcu-emulator = { path = "emulator/app" }
caliptra-mcu-emulator-bmc = { path = "emulator/bmc" }
caliptra-mcu-emulator-caliptra = { "path" = "emulator/caliptra" }
caliptra-mcu-emulator-consts = { "path" = "emulator/consts" }
caliptra-mcu-emulator-mcu-mbox = { path = "emulator/app/mcu-mbox"}
caliptra-mcu-emulator-periph = { path = "emulator/periph" }
caliptra-mcu-emulator-registers-generated = { path = "registers/generated-emulator" }
caliptra-mcu-flash-ctrl-emulator = { path = "platforms/emulator/runtime/kernel/drivers/flash_ctrl"}
caliptra-mcu-flash-ctrl-fpga = { path = "platforms/fpga/runtime/drivers/flash_ctrl"}
caliptra-mcu-flash-driver = { path = "runtime/kernel/drivers/flash" }
caliptra-mcu-flash-image = { path = "common/flash-image" }
caliptra-mcu-fusegen = { path = "provisioning/fuses/fusegen" }
caliptra-mcu-i3c-driver = { path = "runtime/kernel/drivers/i3c" }
caliptra-mcu-libtockasync = { path = "runtime/userspace/libtockasync" }
caliptra-mcu-builder = { path = "builder" }
caliptra-mcu-components = { path = "runtime/kernel/components" }
caliptra-mcu-config = { path = "common/config" }
caliptra-mcu-debug-unlock-signer = { path = "common/debug-unlock-signer" }
caliptra-mcu-config-emulator = { path = "platforms/emulator/config" }
caliptra-mcu-config-fpga = { path = "platforms/fpga/config" }
caliptra-mcu-error = { path = "error" }
caliptra-mcu-firmware-bundler = { path = "firmware-bundler" }
caliptra-mcu-fuses-generator = { path = "registers/fuses" }
caliptra-mcu-coverage = { path = "coverage" }
caliptra-mcu-hw-model = { path = "hw/model" }
caliptra-mcu-test-fw-exception-handler = { path = "hw/model/test-fw/exception-handler" }
caliptra-mcu-test-fw-hitless-update-flow = { path = "hw/model/test-fw/hitless-update-flow" }
caliptra-mcu-test-fw-mailbox-responder = { path = "hw/model/test-fw/mailbox-responder" }
caliptra-mcu-test-fw-otp-blank-check = { path = "hw/model/test-fw/otp-blank-check" }
caliptra-mcu-test-fw-lc-ctrl = { path = "hw/model/test-fw/lc-ctrl" }
caliptra-mcu-test-fw-otp-scramble-check = { path = "hw/model/test-fw/otp-scramble-check" }
caliptra-mcu-test-fw-sw-digest-lock = { path = "hw/model/test-fw/sw-digest-lock" }
caliptra-mcu-image-header = { path = "platforms/emulator/mcu-image-header" }
caliptra-mcu-mbox-comm = { path = "runtime/kernel/drivers/mcu_mbox" }
caliptra-mcu-mbox-common = { path = "common/mcu-mbox" }
caliptra-mcu-mbox-driver = { path = "platforms/emulator/runtime/kernel/drivers/mcu_mbox" }
caliptra-mcu-otp-lifecycle = { path = "common/otp-lifecycle" }
caliptra-mcu-platforms-common = { path = "platforms/common" }
caliptra-mcu-rom-common = { path = "rom" }
caliptra-mcu-test-harness = {path = "platforms/test_harness"}
caliptra-mcu-testing-common = { path = "common/testing" }
caliptra-mcu-tock-veer = { path = "runtime/kernel/veer" }
caliptra-mcu-mctp-vdm-common = { path = "common/mctp-vdm" }
caliptra-mcu-otp-digest = { path = "common/otp-digest" }
caliptra-mcu-pldm-common = { path = "common/pldm"}
caliptra-mcu-pldm-fw-pkg = { path = "emulator/bmc/pldm-fw-pkg" }
caliptra-mcu-pldm-ua = { path = "emulator/bmc/pldm-ua"}
caliptra-mcu-poll-common = { path = "common/poll"}
caliptra-mcu-provisioning-fuses = { path = "provisioning/fuses/lib" }
caliptra-mcu-registers-generated = { path = "registers/generated-firmware" }
caliptra-mcu-registers-generator = { path = "registers/generator" }
caliptra-mcu-registers-systemrdl = { path = "registers/systemrdl" }
caliptra-mcu-registers-systemrdl-new = { path = "registers/systemrdl-new" }
caliptra-mcu-romtime = { path = "romtime" }

# App related dependencies
caliptra-mcu-external-cmds-common = { path = "runtime/userspace/api/external-cmds-common" }
caliptra-mcu-mbox-lib = { path = "runtime/userspace/api/mcu-mbox-lib" }
caliptra-mcu-mctp-vdm-lib = { path = "runtime/userspace/api/mctp-vdm-lib" }
caliptra-mcu-pldm-lib = { path = "runtime/userspace/api/pldm-lib" }
caliptra-mcu-spdm-lib = { path = "runtime/userspace/api/spdm-lib", default-features = false }
caliptra-mcu-libsyscall-caliptra = { path = "runtime/userspace/syscall" }
caliptra-mcu-libapi-caliptra = { path = "runtime/userspace/api/caliptra-api" }
caliptra-mcu-libapi-emulated-caliptra = { path = "platforms/emulator/runtime/userspace/api/caliptra-api" }

# libtock dependencies
caliptra-mcu-libtock = { path = "runtime/userspace/libtock" }
caliptra-mcu-libtock_alarm = { path = "runtime/userspace/libtock/apis/peripherals/alarm" }
caliptra-mcu-libtock_console = { path = "runtime/userspace/libtock/apis/interface/console" }
caliptra-mcu-libtock_debug_panic = { path = "runtime/userspace/libtock/panic_handlers/debug_panic" }
caliptra-mcu-libtock_low_level_debug = { path = "runtime/userspace/libtock/apis/kernel/low_level_debug" }
caliptra-mcu-libtock_platform = { path = "runtime/userspace/libtock/platform" }
caliptra-mcu-libtock_rng = { path = "runtime/userspace/libtock/apis/peripherals/rng" }
caliptra-mcu-libtock_runtime = { path = "runtime/userspace/libtock/runtime" }
caliptra-mcu-libtock_small_panic = { path = "runtime/userspace/libtock/panic_handlers/small_panic" }
caliptra-mcu-libtock_unittest = { path = "runtime/userspace/libtock/unittest" }
caliptra-mcu-tbf-header = { path = "runtime/userspace/libtock/tbf-header" }

caliptra-bitstream-downloader = { git = "https://github.com/chipsalliance/caliptra-infra", rev = "3db904cf9cd704fcf890da32fd61dd30bfce8d11" }

# caliptra dependencies; keep git revs in sync
caliptra-api = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-api-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-auth-man-gen = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-auth-man-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-builder = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-drivers = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-emu-bus = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-emu-cpu = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-emu-derive = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-emu-periph = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-emu-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-error = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe", default-features = false }
caliptra-hw-model = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-hw-model-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-image-crypto = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe", default-features = false, features = ["rustcrypto"] }
caliptra-image-fake-keys = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-image-gen = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-image-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-ocp-eat = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe",  default-features = false  }
caliptra-registers = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-test = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-test-harness = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-test-harness-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
caliptra-ureg = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe" }
dpe = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "294bcacbd34aca6e23ce7b652885e3236f7e7afe", default-features = false, features = ["dpe_profile_p384_sha384"] }

# local caliptra dependency; useful when developing
# caliptra-api = { path = "../caliptra-sw/api" }
# caliptra-api-types = { path = "../caliptra-sw/api/types" }
# caliptra-auth-man-gen = { path = "../caliptra-sw/auth-manifest/gen", default-features = false }
# caliptra-auth-man-types = { path = "../caliptra-sw/auth-manifest/types", default-features = false }
# caliptra-bitstream-downloader = { path = "../caliptra-sw/ci-tools/bitstream-downloader" }
# caliptra-builder = { path = "../caliptra-sw/builder" }
# caliptra-drivers = { path = "../caliptra-sw/drivers" }
# caliptra-emu-bus = { path = "../caliptra-sw/sw-emulator/lib/bus" }
# caliptra-emu-cpu = { path = "../caliptra-sw/sw-emulator/lib/cpu" }
# caliptra-emu-derive = { path = "../caliptra-sw/sw-emulator/lib/derive" }
# caliptra-emu-periph = { path = "../caliptra-sw/sw-emulator/lib/periph" }
# caliptra-emu-types = { path = "../caliptra-sw/sw-emulator/lib/types" }
# caliptra-error = { path = "../caliptra-sw/error", default-features = false }
# caliptra-hw-model = { path = "../caliptra-sw/hw-model" }
# caliptra-hw-model-types = { path = "../caliptra-sw/hw-model/types" }
# caliptra-image-crypto = { path = "../caliptra-sw/image/crypto", default-features = false, features = ["rustcrypto"] }
# caliptra-image-fake-keys = { path = "../caliptra-sw/image/fake-keys" }
# caliptra-image-gen = { path = "../caliptra-sw/image/gen" }
# caliptra-image-types = { path = "../caliptra-sw/image/types" }
# caliptra-ocp-eat = { path = "../caliptra-sw/common/eat",  default-features = false  }
# caliptra-registers = { path = "../caliptra-sw/registers" }
# caliptra-test = { path = "../caliptra-sw/test" }
# caliptra-test-harness-types = { path = "../caliptra-sw/test-harness/types" }
# caliptra-ureg = { path = "../caliptra-sw/ureg" }
# dpe = { path = "../caliptra-sw/dpe/dpe", default-features = false, features = ["dpe_profile_p384_sha384"] }

# tock dependencies; keep git revs in sync
capsules-core = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
capsules-extra = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
capsules-system = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
components = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
kernel = { git = "https://github.com/tock/tock.git", rev = "release-2.2" , features = ["debug_load_processes"] }
riscv = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
riscv-csr = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
rv32i = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
tock-registers = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }

# local Tock dependencies; if you use these, you also need to use local caliptra-sw and change its tock-registers to point at the same tock location
# capsules-core = { path = "../tock/capsules/core" }
# capsules-extra = { path = "../tock/capsules/extra" }
# capsules-system = { path = "../tock/capsules/system" }
# components = { path = "../tock/boards/components" }
# kernel = { path = "../tock/kernel" }
# riscv = { path = "../tock/arch/riscv" }
# riscv-csr = { path = "../tock/libraries/riscv-csr" }
# rv32i = { path = "../tock/arch/rv32i" }
# tock-registers = { path = "../tock/libraries/tock-register-interface" }



# Always optimize the emulator during tests, as it is a major bottleneck for
# test speed.
[profile.test]
inherits = "release"
opt-level = 3
lto = "thin"

[profile.release]
debug = true      # Keep debug symbols in the release ELF so that we can debug more easily.
lto = true
opt-level = "z"
codegen-units = 1

[patch.crates-io]
openssl = { git = "https://github.com/clundin25/rust-openssl.git", rev = "4ada1c1d7c264e052e7bb71ecddbd196a5c2a0c7" } # MLDSA
